fix an error of a jitting y-scrollbar over content

--- a/app/app.css
+++ b/app/app.css
@@ -26,8 +26,6 @@
 #header{
 	background: #E6EEFB;
 	z-index: 2000;
-	position: relative;
-	top: 0px;
 }
 
 #content{
